RESOLVED FIXED311594
[JSC][WASM][Debugger] Fix active thread selection in multi-VM stops and add step tests
https://bugs.webkit.org/show_bug.cgi?id=311594
Summary [JSC][WASM][Debugger] Fix active thread selection in multi-VM stops and add s...
Yijia Huang
Reported 2026-04-06 14:18:37 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-06 14:18:42 PDT
Yijia Huang
Comment 2 2026-04-06 14:41:31 PDT
Yijia Huang
Comment 3 2026-04-06 14:51:26 PDT
EWS
Comment 4 2026-04-09 09:39:46 PDT
Committed 310847@main (121f967d4c90): <https://commits.webkit.org/310847@main> Reviewed commits have been landed. Closing PR #62147 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.