[JSC][WASM][Debugger] Fix active thread selection in multi-VM stops and add step tests rdar://174187067 https://bugs.webkit.org/show_bug.cgi?id=311594

Reviewed by Keith Miller.

LLDB always selected the wrong thread when multiple VMs stopped simultaneously.
Root cause: LLDB resets m_selected_tid on every stop and falls back to m_threads[0]
(lowest IndexID). Passive threads had StopInfoSignal(SIGSTOP) with ShouldSelect()=true,
causing the selection loop to be skipped. Fix by sending signal 0 for passive threads
so ShouldSelect()=false and the event thread wins selection.

Also inline collectAllStoppedThreads into sendStopReplyForThread with event-thread-first
ordering, fix a null-deref before vm null check, fix off-by-1 WASM offset comments in
multi-vm-same-module-different-funcs.js, add step test coverage for multi-VM test cases,
and remove the stale known issue from README.md.

Tests:
* JSTests/wasm/debugger/tests/tests.py:
(MultiVMSameModuleSameFunctionTestCase.stepTest)
(MultiVMSameModuleDifferentFunctionsTestCase.stepTest)

Canonical link: https://commits.webkit.org/310847@main