JSTests/wasm/debugger/resources/wasm/multi-vm-same-module-different-funcs.js
@@ -24,7 +24,7 @@ const wasm = new Uint8Array([
     // Export function 2 as "func3"
     0x05, 0x66, 0x75, 0x6e, 0x63, 0x33, 0x00, 0x02,
 
-    // [0x30] Code section
+    // [0x2f] Code section
     0x0a,                   // section id=10
     0x22,                   // section size=34
     0x03,                   // 3 functions
@@ -32,38 +32,38 @@ const wasm = new Uint8Array([
     // Function 0: func1 (body size=10)
     0x0a,                   // body size
     0x00,                   // 0 local declarations
-    0x01,                   // [0x35] nop
-    0x41, 0x0a,             // [0x36] i32.const 10
-    0x1a,                   // [0x38] drop
-    0x01,                   // [0x39] nop
-    0x41, 0x14,             // [0x3a] i32.const 20
-    0x1a,                   // [0x3c] drop
-    0x0b,                   // [0x3d] end
+    0x01,                   // [0x34] nop
+    0x41, 0x0a,             // [0x35] i32.const 10
+    0x1a,                   // [0x37] drop
+    0x01,                   // [0x38] nop
+    0x41, 0x14,             // [0x39] i32.const 20
+    0x1a,                   // [0x3b] drop
+    0x0b,                   // [0x3c] end
 
     // Function 1: func2 (body size=10)
     0x0a,                   // body size
     0x00,                   // 0 local declarations
-    0x01,                   // [0x40] nop
-    0x41, 0x1e,             // [0x41] i32.const 30
-    0x1a,                   // [0x43] drop
-    0x01,                   // [0x44] nop
-    0x41, 0x28,             // [0x45] i32.const 40
-    0x1a,                   // [0x47] drop
-    0x0b,                   // [0x48] end
+    0x01,                   // [0x3f] nop
+    0x41, 0x1e,             // [0x40] i32.const 30
+    0x1a,                   // [0x42] drop
+    0x01,                   // [0x43] nop
+    0x41, 0x28,             // [0x44] i32.const 40
+    0x1a,                   // [0x46] drop
+    0x0b,                   // [0x47] end
 
     // Function 2: func3 (body size=10)
     0x0a,                   // body size
     0x00,                   // 0 local declarations
-    0x01,                   // [0x4b] nop
-    0x41, 0x32,             // [0x4c] i32.const 50
-    0x1a,                   // [0x4e] drop
-    0x01,                   // [0x4f] nop
-    0x41, 0x3c,             // [0x50] i32.const 60
-    0x1a,                   // [0x52] drop
-    0x0b                    // [0x53] end
+    0x01,                   // [0x4a] nop
+    0x41, 0x32,             // [0x4b] i32.const 50
+    0x1a,                   // [0x4d] drop
+    0x01,                   // [0x4e] nop
+    0x41, 0x3c,             // [0x4f] i32.const 60
+    0x1a,                   // [0x51] drop
+    0x0b                    // [0x52] end
 ]);
 
-const NUM_WORKERS = 2;
+const NUM_WORKERS = 1;
 const PRINT_INTERVAL = 1e7;
 
 print("=== Multi-VM Different Functions Test ===");
@@ -88,19 +88,18 @@ const workerScript = (workerId, funcName) => `
     }
 `;
 
-// Start workers, each running a different function
-const functions = ['func2', 'func3'];
+// Main thread runs func1
+print("Main thread starting func1 execution...");
+const mainModule = new WebAssembly.Module(wasm);
+const mainInstance = new WebAssembly.Instance(mainModule, {});
+const func1 = mainInstance.exports.func1;
+
+// Worker runs func2 (different from main thread's func1)
+const functions = ['func2'];
 for (let i = 0; i < NUM_WORKERS; i++) {
     $.agent.start(workerScript(i + 1, functions[i]));
     print(`Started worker ${i + 1}/${NUM_WORKERS} running ${functions[i]}`);
 }
-
-// Main thread runs func1
-print("Main thread starting func1 execution...");
-print("");
-const mainModule = new WebAssembly.Module(wasm);
-const mainInstance = new WebAssembly.Instance(mainModule, {});
-const func1 = mainInstance.exports.func1;
 
 let iteration = 0;
 for (; ;) {
